--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+debug/
+
 # Logs
 logs
 *.log
@@ -81,6 +83,7 @@ typings/
 # Nuxt.js build / generate output
 .nuxt
 dist
+!/dist/.keep
 
 # Gatsby files
 .cache/
